--- a/PaydayDecks.csproj
+++ b/PaydayDecks.csproj
@@ -59,11 +59,16 @@
 		<Reference Include="Unity.TextMeshPro">
 			<HintPath>$(RoundsRefs)\data\Unity.TextMeshPro.dll</HintPath>
 		</Reference>
+		<Reference Include="UnityEngine.TextCoreModule">
+			<HintPath>$(RoundsRefs)\data\UnityEngine.TextCoreModule.dll</HintPath>
+		</Reference>
+		<Reference Include="PhotonUnityNetworking">
+			<HintPath>$(RoundsRefs)\data\PhotonUnityNetworking.dll</HintPath>
+		</Reference>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="AssetsEmbedded" />
-      <Folder Include="Effects" />
     </ItemGroup>
 
     <ItemGroup>
